test/error/constructorScope.dck
%-

tydecl sex = Boy | Girl

(:def boy   
  NonBinary : sex)
